--- a/lib/spike_example_web/templates/page/index.html.heex
+++ b/lib/spike_example_web/templates/page/index.html.heex
@@ -1,6 +1,11 @@
 <section class="phx-hero">
-  <h1><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
-  <p>Peace of mind from prototype to production</p>
+  <h1><%= gettext "Welcome to %{name}!", name: "Spike LiveView examples app" %></h1>
+  <p>
+    <h2>Examples:</h2>
+    <ul>
+      <li><a href="/signup">Signup form</a></li>
+    </ul>
+  </p>
 </section>
 
 <section class="row">
