Add simple form example

--- a/lib/spike_example_web/templates/page/index.html.heex
+++ b/lib/spike_example_web/templates/page/index.html.heex
@@ -3,6 +3,9 @@
   <p>
     <h2>Examples:</h2>
     <ul>
+      <li><a href="/simple-liveview">Simple form example (LiveView)</a></li>
+      <li><a href="/simple-livecomponent">Simple form example (LiveComponent)</a></li>
+
       <li><a href="/signup">Signup form</a></li>
     </ul>
   </p>
