--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -42,12 +42,16 @@ select {
 .phx-hero input {
   background: #ffffff;
 }
+.phx-hero ul {
+  text-align: left;
+}
 .phx-logo {
   min-width: 300px;
   margin: 1rem;
   display: block;
 }
 .phx-logo img {
+  height: 100px;
   width: auto;
   display: block;
 }
