--- a/lib/spike_example_web/templates/layout/root.html.heex
+++ b/lib/spike_example_web/templates/layout/root.html.heex
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="csrf-token" content={csrf_token_value()}>
-    <%= live_title_tag assigns[:page_title] || "SpikeExample", suffix: " · Phoenix Framework" %>
+    <%= live_title_tag assigns[:page_title] || "Spike Example" %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
@@ -14,14 +14,13 @@
       <section class="container">
         <nav>
           <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-            <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
-              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
-            <% end %>
+            <li><a href="https://hexdocs.pm/spike/">Spike documentation</a></li>
+            <li><a href="https://hexdocs.pm/spike-liveview/">Spike.LiveView documentation</a></li>
+            <li><a href="https://hexdocs.pm/spike-surface/">Spike.Surface documentation</a></li>
           </ul>
         </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src={Routes.static_path(@conn, "/images/phoenix.png")} alt="Phoenix Framework Logo"/>
+        <a href="https://github.com/hubertlepicki/spike/" class="phx-logo">
+          <img src={Routes.static_path(@conn, "/images/spike-logo.png")} alt="Spike Logo"/>
         </a>
       </section>
     </header>
