--- a/lib/spike_example_web/templates/page/index.html.heex
+++ b/lib/spike_example_web/templates/page/index.html.heex
@@ -1,49 +1,10 @@
 <section class="phx-hero">
   <h1><%= gettext "Welcome to %{name}!", name: "Spike LiveView examples app" %></h1>
-  <p>
-    <h2>Examples:</h2>
-    <ul>
-      <li><a href="/simple-liveview">Simple form example (LiveView)</a></li>
-      <li><a href="/simple-livecomponent">Simple form example (LiveComponent)</a></li>
-
-      <li><a href="/signup">Signup form</a></li>
-    </ul>
-  </p>
+  <h2>Examples:</h2>
+  <ul>
+    <li><a href="/simple-liveview">Simple form example (LiveView)</a></li>
+    <li><a href="/simple-livecomponent">Simple form example (LiveComponent)</a></li>
+    <li><a href="/signup">More complex signup form (LiveView)</a></li>
+  </ul>
 </section>
 
-<section class="row">
-  <article class="column">
-    <h2>Resources</h2>
-    <ul>
-      <li>
-        <a href="https://hexdocs.pm/phoenix/overview.html">Guides &amp; Docs</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix/blob/v1.6/CHANGELOG.md">v1.6 Changelog</a>
-      </li>
-    </ul>
-  </article>
-  <article class="column">
-    <h2>Help</h2>
-    <ul>
-      <li>
-        <a href="https://elixirforum.com/c/phoenix-forum">Forum</a>
-      </li>
-      <li>
-        <a href="https://web.libera.chat/#elixir">#elixir on Libera Chat (IRC)</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">Twitter @elixirphoenix</a>
-      </li>
-      <li>
-        <a href="https://elixir-slackin.herokuapp.com/">Elixir on Slack</a>
-      </li>
-      <li>
-        <a href="https://discord.gg/elixir">Elixir on Discord</a>
-      </li>
-    </ul>
-  </article>
-</section>
