Update to Spike 0.2.2, add Surface UI examples

--- a/lib/spike_example_web/templates/page/index.html.heex
+++ b/lib/spike_example_web/templates/page/index.html.heex
@@ -4,7 +4,10 @@
   <ul>
     <li><a href="/simple-liveview">Simple form example (LiveView)</a></li>
     <li><a href="/simple-livecomponent">Simple form example (LiveComponent)</a></li>
+    <li><a href="/surface/simple-component">Simple form example (Surface.LiveComponent)</a></li>
+
     <li><a href="/signup">More complex signup form (LiveView)</a></li>
+    <li><a href="/surface/signup">More complex signup form (Surface.LiveView)</a></li>
   </ul>
 </section>
 
