Fix links to docs

--- a/lib/spike_example_web/templates/layout/root.html.heex
+++ b/lib/spike_example_web/templates/layout/root.html.heex
@@ -15,8 +15,8 @@
         <nav>
           <ul>
             <li><a href="https://hexdocs.pm/spike/">Spike documentation</a></li>
-            <li><a href="https://hexdocs.pm/spike-liveview/">Spike.LiveView documentation</a></li>
-            <li><a href="https://hexdocs.pm/spike-surface/">Spike.Surface documentation</a></li>
+            <li><a href="https://hexdocs.pm/spike_liveview/">Spike.LiveView documentation</a></li>
+            <li><a href="https://hexdocs.pm/spike_surface/">Spike.Surface documentation</a></li>
           </ul>
         </nav>
         <a href="https://github.com/hubertlepicki/spike/" class="phx-logo">
