--- a/lib/spike_example_web/templates/page/index.html.heex
+++ b/lib/spike_example_web/templates/page/index.html.heex
@@ -5,6 +5,7 @@
     <li><a href="/simple-liveview">Simple form example (LiveView)</a></li>
     <li><a href="/simple-livecomponent">Simple form example (LiveComponent)</a></li>
     <li><a href="/surface/simple-component">Simple form example (Surface.LiveComponent)</a></li>
+    <li><a href="/custom-form-controls">Custom form controls (LiveView)</a></li>
 
     <li><a href="/signup">More complex signup form (LiveView)</a></li>
     <li><a href="/surface/signup">More complex signup form (Surface.LiveView)</a></li>
